# ImplementationAlgorithms

./: Cargo.toml  README.md
src/: acm_icpc.rs  drawing_book.rs  gcd.rs  solve_me_first.rs  strange_counter.rs  utils.rs
src/implementation/: absolute_permutation.rs  acm_icpc.rs  almost_sorted.rs  angry.rs  append_and_delete.rs  apple_and_orange.rs  bar.rs  beautiful_days_at_movies.rs  beautiful_triplets.rs  between_two_sets.rs  bigger_is_greater.rs  bill_division.rs  bomberman.rs  breaking_records.rs  cats_and_mouse.rs  cavity_map.rs  chocolate_feast.rs  circular_array_rotation.rs  climbing_the_leaderboard.rs  containers_of_balls.rs  counting_valleys.rs  cut_sticks.rs  day_of_programmer.rs  designer_pdf_viewer.rs  divisible_sum_pairs.rs  drawing_book.rs  electronics_shop.rs  ema_supercomputer.rs  encryption.rs  equalize_array.rs  extra_long_facto.rs  fair_rations.rs  find_digits.rs  flatland_space_stations.rs  grading_students.rs  grid_search.rs  halloween_sale.rs  happy_ladybugs.rs  hurdle_race.rs  jumping_on_clouds.rs  (+26 more)
src/toolkit/permutations/: heaps.rs  johnson_trotter.rs  lexicographic.rs
src/warmup/: array_sum.rs  cake.rs  compare_triplets.rs  diagonal_difference.rs  mini_max_sum.rs  plus_minus.rs  solve_me_first.rs  staircase.rs  time_conversion.rs  very_big_sum.rs
task-descriptions/implementation/: task_descriptions.md
task-descriptions/warmup/: task_descriptions.md
